utils/local_deploy/08_install_pb_services/istio_rules.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: "mtls-to-default-ns"
  namespace: "default"
spec:
  host: "*.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL  
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "kubernetes-master"
  namespace: "default"
spec:
  host: "kubernetes.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
